<resources>
    <string name="app_name" translatable="false">SCP Foundation RU On/Offline</string>
    <string name="market_url" translatable="false">market://details?id=%s</string>
    <string name="social_provider_facebook_title" translatable="false">Facebook</string>
    <string name="social_provider_google_title" translatable="false">Google</string>
    <string name="feedback_email" translatable="false">neva.spb.rx@gmail.com</string>
    <string name="image_title" translatable="false">scp_image</string>
    <string name="image_description" translatable="false">Image from gallery of SCP Foundation app</string>
    <string name="max_level" translatable="false">Max level</string>
    <string name="google_services_not_connected" translatable="false">Google Services is not connected</string>
    <string name="error_unexpected" translatable="false">Unexpected error</string>
    <string name="share_app_vk_link" translatable="false">https://play.google.com/store/apps/details?id=%s</string>
    <string name="scp_art_ad_title" translatable="false">Книги SCP Foundation уже в продаже!</string>
    <string name="ad" translatable="false">Ad</string>
    <string name="scp_art_ad_description" translatable="false">Спрашивайте в книжных магазинах своего города или закажите доставку в любой уголок страны</string>
    <string name="scp_art_ad_cta" translatable="false">Подробнее</string>
    <string name="login" translatable="false">Login</string>
    <string name="drawer_item_1">About the SCP Foundation</string>
    <string name="drawer_item_2">Site News Hub</string>
    <string name="drawer_item_3">Rating articles</string>
    <string name="drawer_item_4">New articles</string>
    <string name="drawer_item_5">Random article</string>
    <string name="drawer_item_6">Series I</string>
    <string name="drawer_item_7">Series II</string>
    <string name="drawer_item_8">Series III </string>
    <string name="drawer_item_10">Other files</string>
    <string name="drawer_item_12">Favorites</string>
    <string name="drawer_item_13">Offline articles</string>
    <string name="drawer_item_14">Gallery</string>
    <string name="drawer_item_15">Search</string>
    <string name="drawer_item_objects4">Series IV</string>
    <string name="drawer_item_read">Read articles</string>
    <string name="drawer_item_11">Tales</string>
    <string name="drawer_item_9">Series Ru</string>
    <string name="settings">Settings</string>
    <string name="night_mode">Night mode</string>
    <string name="text_size">Text size</string>
    <string name="in_apps">Extended version</string>
    <string name="day_mode">Day mode</string>
    <string name="unsupported_link">This link is not supported</string>
    <string name="share">Share</string>
    <string name="open_with">Open in browser</string>
    <string name="open_comments_with">Open comments in browser</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="share_link_text">%1$s\n\nSent from application \"SCP Foundation\"\nhttps://play.google.com/store/apps/details?id=%2$s</string>
    <string name="share_choser_text">Share through…</string>
    <string name="browser_choser_text">Open with…</string>
    <string name="favorites_add">Add to favorites</string>
    <string name="favorites_remove">Remove from favorites</string>
    <string name="text_size_article">Text size articles</string>
    <string name="text_size_lists">Text size lists</string>
    <string name="text_size_dialog_title">Text size settings</string>
    <string name="close">Close</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="about_org">About the SCP Foundation</string>
    <string name="news">News</string>
    <string name="search_hint">Enter request</string>
    <string name="error_no_search_results">Nothing was found for your request</string>
    <string name="start_download">The article is not in the database. Starting the download.</string>
    <string name="download">Download</string>
    <string name="settings_notif_on">Notifications for new articles</string>
    <string name="settings_notif_led_on">LED indicator</string>
    <string name="settings_notif_vibrate_on">Vibration</string>
    <string name="settings_notif_sound_on">Notification sound</string>
    <string name="settings_notification">Notification preferences</string>
    <string name="dialog_title_subscriptions">Disabling ads, automatic cloud sync, and atmospheric fonts.</string>
    <string name="dialog_title_subscriptions_disabled_free_downloads">Disabling ads, automatic cloud sync, unlimited downloading of offine articles, and atmospheric fonts.</string>
    <string name="current_subscription">Your current subscription:</string>
    <string name="no_subscriptions">Empty</string>
    <string name="refresh">Refresh</string>
    <string name="i_accept">I accept</string>
    <string name="error_read_licence">The license file could not be opened.</string>
    <string name="new_version_features">New version</string>
    <string name="hurray">Hooray!</string>
    <string name="in_progress">In progress</string>
    <string name="settings_design">Settings design</string>
    <string name="settings_design_list_new">New design in the lists</string>
    <string name="dialog_random_page_title">Connect to Foundation</string>
    <string name="dialog_random_page_message">Checking the clearance level</string>
    <string name="remove_ads">Disable ads?</string>
    <string name="yes_bliad">Yes!</string>
    <string name="app_info">About the application</string>
    <string name="remove_ads_for_free">Disable ads and earn points for free!</string>
    <string name="remove_ads_for_free_disabled_free_downloads">Disable ads, increase the offline aricle limit, and earn points for free!</string>
    <string name="ads_reward_gained">No more ads for %d hours!</string>
    <string name="wait">Wait…</string>
    <string name="ads_reward_error_loading">Failed to load. Try again.</string>
    <string name="ads_reward_description_title">Instruction</string>
    <string name="ads_reward_description_content">We\'ll show you the video and temporarily disable ads. You can do this as many times as you like!</string>
    <string name="ads_reward_ok">All clear!</string>
    <string name="settings_design_list_type">Design articles in the list</string>
    <string name="rating">Rating %d</string>
    <string name="yes_sir">Yes sir!</string>
    <string name="reward_not_loaded_yet">Couldn\'t load. Try again.</string>
    <string name="settings_design_font">Font</string>
    <string name="login_advantages">Attention! Authorization is not required, but is needed for cloud syncing of your favorite articles and articles you have read. It also allows you to participate in the agent ranking. You can get further instructions from the head of the content area.</string>
    <string name="login_advantages_title">Why do we prefer authorization?</string>
    <string name="login_greetings">Welcome, Agent %s</string>
    <string name="error_login_no_email">You cannot login without e-mail.</string>
    <string name="materials">Other files</string>
    <string name="only_premium">Only for subscribing</string>
    <string name="activate">Activate</string>
    <string name="info">Information</string>
    <string name="subs_info">Optional features include disabling ads, using all fonts without restriction, multiplication of all points received by 3, and cloud syncing of favorites and readings. Most importantly, you\'re motivating developers to improve the app!</string>
    <string name="subs_info_disabled_free_downloads">Optional features include disabling ads, using all fonts without restriction, multiplication of all points received by 3, and cloud syncing of favorites and readings. Most importantly, you\'re motivating developers to improve the app!</string>
    <string-array name="fag_items">
        <item>Authorization</item>
        <item>Cloud Sync</item>
        <item>Rating System</item>
    </string-array>
    <string-array name="fag_items_content">
        <item>1. You can login in the left menu, moving above the button \"Login\".\n
        2. The entrance through the network requires an e-mail specified in the network because it is used as an ID in the server\'s database.\n
        3. Authorization is needed to sync read and favorited articles into the cloud and participate in the agent ranking.\n</item>
        <item>1. Works only for authorized agents.\n
        2. Requires an internet connection.\n
        3. Works automatically for agents with a subscription.\n
        4. Economical agents need to manually sync. see \"Settings\".\n
        5. The status of the article is saved to the cloud and is read and added to the favorites.\n
        6. If you delete the application data, any unsynchronized data will be lost.\n</item>
        <item>1. Works only for authorized agents.\n
        2. Requires an internet connection.\n
        3. Works automatically for agents with a subscription.\n
        4. Economical agents need to manually sync. see \"Settings\"\n
        5. Points are awarded for adding articles to your favorites, reading articles, installing apps, viewing ads, and making any purchase in the application. The list may be expanded.\n
        6. All points apply modifiers - if you have a subscription, all received points will be increased.\n
        7. As you receive your points, your clearance level will grow.\n
        8. Current points you have until you reach the next level is shown by the green line around the avatar.\n
        9. Number points to the next level are shown when you click on the avatar.\n
        10. The Agent rating table is shown when you click on the avatar. It is updated every few minutes.</item>
    </string-array>
    <string name="free">Free</string>
    <string name="dialog_free_ads_disable_title">Remove Ads</string>
    <string name="start_market_error">Failed to launch the Google Play Store</string>
    <string name="thanks_for_supporting_us">The developers are very grateful for your support!</string>
    <string name="invitation_message">Learn about SCPs</string>
    <string name="invitation_cta">Join us</string>
    <string name="invitation_title">SCP Foundation secret materials</string>
    <string name="invite_friends">Invite friends to the app to disable ads for %1$d hours and get %2$d points!</string>
    <string name="watch_video_to_disable_ads">Watch a video ad to disable ads for %1$d hours and get %2$d points!</string>
    <string name="app_install_ads_disable_title">Install our other apps to disable ads for %1$d hours and get %2$d points!</string>
    <string name="vk_group_join_ads_disable_title">Join the VK group to disable ads for %1$d hours and get %2$d points!</string>
    <string name="need_vk_group_access">Permission to access groups is required. Log in again.</string>
    <string name="gallery">Gallery</string>
    <string name="error_login_firebase_connection">Login error. Please try again. %s</string>
    <string name="on_user_logined">Welcome, agent %s</string>
    <string name="login_in_progress_custom_token">Requesting a password on the server</string>
    <string name="faq">FAQ</string>
    <string name="menuAppLangVersions">Branches of the Fund</string>
    <string name="settings_ads_banner_in_lists">Banner in articles list</string>
    <string name="settings_ads_title">Ad settings</string>
    <string name="settings_ads_native_in_lists">Native ads in articles list</string>
    <string name="settings_ads_banner_in_article">Banner in article</string>
    <string name="disable_all_ads">Disable all ads</string>
    <string name="remove_ads_for_month">For month for %s</string>
    <string name="remove_ads_for_free_for_hours"><![CDATA[For some hours for<br/><b><font color=#4CAF50>FREE</font></b>]]></string>
    <string name="add_to_read">Add to read</string>
</resources>