<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <item
        android:id="@+id/subscribe"
        android:icon="@drawable/ic_monetization_on_white_24dp"
        android:title="@string/in_apps"
        android:visible="false"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings_white_24dp"
        android:title="@string/settings"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/night_mode_item"
        android:title="@string/night_mode"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/faq"
        android:icon="@drawable/ic_help_outline_white_24dp"
        android:title="@string/faq"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/info"
        android:icon="@drawable/ic_info_outline"
        android:title="@string/app_info"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_share_white_24dp"
        android:title="@string/share"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction"
        />

    <item
        android:id="@+id/save_image"
        android:icon="@drawable/ic_save_white_24dp"
        android:title="@string/download"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction"
        />

</menu>