<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/defaultMargin"
        android:text="@string/settings_ads_title"
        android:textSize="21sp"
        android:textStyle="bold"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/defaultMargin"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/settings_ads_banner_in_lists"
            />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/adsInListsBannerSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/defaultMargin"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/settings_ads_native_in_lists"
            />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/adsInListsNativeSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <View
        android:padding="@dimen/defaultMarginSmall"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:textColorPrimary"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/defaultMargin"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/settings_ads_banner_in_article"
            />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/adsInArticleBannerSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <View
        android:padding="@dimen/defaultMarginSmall"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:textColorPrimary"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/defaultMargin"
        android:text="@string/disable_all_ads"
        android:textSize="18sp"
        android:textStyle="bold"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/defaultMargin"
        >

        <TextView
            android:id="@+id/removeAdsForMonth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?selectableItemBackground"
            android:text="@string/remove_ads_for_month"
            />

        <TextView
            android:id="@+id/removeAdsForFree"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:layout_weight="1"
            android:text="@string/remove_ads_for_free_for_hours"
            />
    </LinearLayout>

</LinearLayout>