<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/menuItemFavorite"
        android:icon="@drawable/ic_favorite_border_white_24dp"
        android:title="@string/add_to_favorites"
        app:showAsAction="never" />
    <item
        android:id="@+id/menuItemRead"
        android:icon="@drawable/ic_mail_outline_white_24dp"
        android:title="@string/add_to_read"
        app:showAsAction="never" />
    <item
        android:id="@+id/menuItemCommentsBrowser"
        android:icon="@drawable/ic_open_in_browser_black_24dp"
        android:title="@string/open_comments_with"
        android:visible="false"
        app:iconTint="@android:color/white"
        app:showAsAction="never" />
    <item
        android:id="@+id/menuItemNextNumberArticle"
        android:icon="@drawable/ic_keyboard_arrow_right_black_24dp"
        android:title="@string/open_comments_with"
        android:visible="false"
        app:iconTint="@android:color/white"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
</menu>