<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:windowBackground"
    android:orientation="vertical"
    android:paddingBottom="@dimen/defaultMargin"
    >

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/defaultMargin"
        android:text="@string/text_size"
        android:textSize="21sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/textSizeUi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/defaultMargin"
        android:paddingRight="@dimen/defaultMargin"
        android:text="@string/text_size_lists"
        />

    <SeekBar
        android:id="@+id/seekbarUi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/defaultMargin"
        />

    <TextView
        android:id="@+id/textSizeArticle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/defaultMargin"
        android:paddingRight="@dimen/defaultMargin"
        android:text="@string/text_size_article"
        />

    <SeekBar
        android:id="@+id/seekbarArticle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/defaultMargin"
        />

</LinearLayout>