<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:windowBackground"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables"
        >

        <TextView
            android:id="@+id/dialogTitle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:padding="@dimen/defaultMargin"
            android:text="@string/dialog_title_subscriptions"
            android:textSize="21sp"
            android:textStyle="bold"
            />

        <ImageView
            android:id="@+id/info"
            android:src="@drawable/ic_info_outline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/defaultMargin"
            android:background="?selectableItemBackgroundBorderless"
            tools:ignore="ContentDescription"
            />

    </LinearLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/removeAdsOneDay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/defaultMarginSmall"
        android:foreground="?selectableItemBackground"
        app:cardBackgroundColor="?artListCardBackgroundColor"
        app:cardCornerRadius="2dp"
        app:cardElevation="2dp"
        >

        <TextView
            android:id="@+id/freeActions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="@dimen/defaultMargin"
            android:text="@string/remove_ads_for_free"
            android:textColor="@color/material_green_500"
            android:textSize="17sp"
            />
    </android.support.v7.widget.CardView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >

        <ProgressBar
            android:id="@+id/progressCenter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:indeterminate="true"
            android:indeterminateTint="?newArticlesTextColor"
            android:indeterminateTintMode="src_in"
            android:paddingBottom="@dimen/defaultMargin"
            android:visibility="visible"
            tools:targetApi="lollipop"
            />

        <TextView
            android:id="@+id/refresh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:background="?selectableItemBackground"
            android:padding="@dimen/defaultMargin"
            android:text="@string/refresh"
            android:textColor="@color/colorAccent"
            android:textSize="21sp"
            android:visibility="gone"
            />

        <LinearLayout
            android:id="@+id/infoContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone"
            >

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:scrollbars="vertical"
                android:layout_height="match_parent"
                />

        </LinearLayout>
    </FrameLayout>
</LinearLayout>